--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,5 @@
 html,
 body {
-  min-height: 100vh;
   background-color: #333;
 }
 
@@ -18,10 +17,9 @@ body {
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
 }
 
-.cover-container {
-  max-width: 60vw;
+#root {
+  min-height: 100vh;
 }
-
 /*
  * Header
  */
